# jellyfin-media-normalizer

./: .gitignore  .pre-commit-config.yaml  COMMIT_CONVENTIONS.cs.md  COMMIT_CONVENTIONS.md  LICENSE  PROJECT-DESCRIPTION.md  README.md  pyproject.toml
.github/: COPILOT-INSTRUCTIONS.md
scripts/: README.md  create_structure.sh  nas_scan.sh
src/jellyfin_media_normalizer/: __init__.py  constants.py  main.py  settings.py
src/jellyfin_media_normalizer/cli/: app.py
src/jellyfin_media_normalizer/models/: confidence_level.py  media_item.py  media_type.py  parsed_media_item.py  parsed_name.py  provider_match.py  scan_result.py  validation_result.py  validation_status.py
src/jellyfin_media_normalizer/parsers/: classifier.py  filename_cleaner.py  media_parser.py  movie_name_parser.py  patterns.py  provider_id_extractor.py  tv_episode_parser.py
src/jellyfin_media_normalizer/providers/: __init__.py  online_provider_resolver.py  provider_clients.py  provider_id_cache.py  provider_resolver_chain.py
src/jellyfin_media_normalizer/reporters/: __init__.py  json_reporter.py  review_reporter.py  unresolved_reporter.py
src/jellyfin_media_normalizer/scanners/: library_scanner.py
src/jellyfin_media_normalizer/services/: parse_service.py  provider_lookup_service.py  scan_service.py
src/jellyfin_media_normalizer/utils/: logging.py  paths.py
src/jellyfin_media_normalizer/validators/: confidence_scorer.py  consistency_validator.py  structure_validator.py  validation_service.py
tests/: test_dummy.py  test_settings.py
tests/models/: __init__.py  test_media_item.py  test_media_type.py  test_parsed_media_item.py  test_parsed_name.py  test_scan_result.py
tests/parses/: __init__.py  test_classifier.py  test_filename_cleaner.py  test_media_parser.py  test_movie_name_parser.py  test_provider_id_extractor.py  test_tv_episode_parser.py
tests/providers/: test_online_provider_resolver.py  test_provider_id_cache.py
tests/reporters/: __init__.py  test_json_reporter.py  test_review_reporter.py
tests/scanners/: __init__.py  test_library_scanner.py
tests/services/: test_parse_service.py  test_provider_lookup_service.py  test_scan_service.py
tests/utils/: test_logging.py  test_paths.py
tests/validators/: test_confidence_scorer.py  test_consistency_validator.py  test_structure_validator.py
